@@ -8,26 +8,26 @@ public class EmployeeTest1 {
 
     public static void main(String[] args) {
 
-        List<Employee> emp = Arrays.asList(new Employee(101, 70000, "IT", 28),
-                (new Employee(103, 65000, "IT", 27)),
-                (new Employee(105, 60000, "HR", 26)),
-                (new Employee(100, 75000, "HR", 29)),
-                (new Employee(102,60000,"IT",31)));
+        List<Employee> emp = List.of(new Employee(101, 25, 70000, "IT"),
+                (new Employee(103, 27,65000, "IT")),
+                (new Employee(105, 32,60000, "HR")),
+                (new Employee(100, 29,75000, "HR")),
+                (new Employee(102, 30, 60000,"IT")));
 
         //sort employees by their salary in descending order. if salary is same sort by department.
-        emp.stream().sorted(Comparator.comparing(Employee::getSalary)
-                .thenComparing(Employee::getDepartment).reversed())
+        emp.stream().sorted(Comparator.comparing(Employee::salary)
+                .thenComparing(Employee::department).reversed())
                 .forEach(System.out::println);
 
         //using custom comparator
 
         Comparator<Employee> customComparator = (e1, e2) -> {
-            int salaryComparison = Double.compare(e2.getSalary(), e1.getSalary());
+            int salaryComparison = Double.compare(e2.salary(), e1.salary());
             if(salaryComparison != 0) {
                 return salaryComparison;
             }
             else {
-                return e1.getDepartment().compareTo(e2.getDepartment());
+                return e1.department().compareTo(e2.department());
             }
         };
 
@@ -38,8 +38,8 @@ public class EmployeeTest1 {
         //increase employee salary by 2000 for employee who are earning <70000
 
         System.out.println("After increasing the salary :");
-        emp.stream().filter(e -> e.getSalary()<70000)
-                .map(e -> e.getSalary()+2000)
+        emp.stream().filter(e -> e.salary()<70000)
+                .map(e -> e.salary()+2000)
                 .toList()
                 .forEach(System.out::println);
     }
